# dynamic-network-architectures

./: .gitignore  README.md  pyproject.toml  setup.py
dynamic_network_architectures/architectures/: 2u2net.py  abstract_arch.py  dinov2_eva.py  nnu2net.py  primus.py  residual_unet.py  resnet.py  u2net.py  unet.py  vgg.py
dynamic_network_architectures/building_blocks/: RSU2.py  RSU_blocks.py  RSUblock.py  convnext_block.py  convnext_encoder.py  eva.py  eva_block.py  helper.py  layer_norm.py  patch_encode_decode.py  plain_conv_encoder.py  regularization.py  residual.py  residual_encoders.py  simple_conv_blocks.py  unet_decoder.py  unet_residual_decoder.py
dynamic_network_architectures/initialization/: weight_init.py
dynamic_network_architectures/tests/: test_RSUblock.py  test_u2n2.py  test_u2net.py
