[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_network_architectures"
version = "0.4.3"
description = "none"
authors = [
    { name = "Fabian Isensee", email = "f.isensee@dkfz.de" }
]
license = { file = "LICENSE" }
requires-python = ">=3.8"

dependencies = [
    "torch>=1.6.0a",
    "numpy",
    "timm<1.0.23",
    "einops",
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = [
    "dynamic_network_architectures",
    "dynamic_network_architectures.*",
]
namespaces = true